one more time to get the menu in bold and correct the letter-spacing

--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -7,7 +7,7 @@
   // transition: 0.3s;
   margin-left: 50%;
   margin-right: 10%;
-  text-align: right;
+  text-align: center;
   padding: 0 5px;
 
 
@@ -20,6 +20,8 @@
 
 .nav-item {
   padding: 8px 12px;
+  font-weight: bold;
+  letter-spacing: 0.1rem;
 }
 
 // .icon {
